--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nuevo Libro de Anne Baileys</title>
+    <title>Nuevo libro de Anne Baileys</title>
     <link href="estilo.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Nuevo Libro de Anne Baileys</h1>
+    <h2>Disponible ya: Nuevo libro de Anne Baileys "Bith of the Ocean"</h2>
+    
+    <img id="img-anne" src="images/hannah-olinger-NXiIVnzBwZ8-unsplash.jpg" alt="Anne Baileys" >
 
-    <img id="img-anne" src="images/books-on-writing.jpg" alt="Anne Baileys" />
 
-    <video width="320" height="240" controls>
-        <source src="video/movie.mp4" type="video/mp4">
-        <source src="video/movie.ogv" type="video/ogg">
-        Su navegador no soporta el formato de video.
-    </video>
 
-    <div class="formulario">
+    <div ></div>
+ <h6>¡Suscríbete! Los primeros 100 suscriptores recibirán un código con 25% dto.</h6>
+ <div class="formulario">
         <form action="" method="get">
             <div class="form-line">
                 <label for="nombre">Nombre</label>
